--- a/index.html
+++ b/index.html
@@ -50,8 +50,15 @@
   
 
   <div class="attribution">
+    <p>
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="https://github.com/Andrii-Rohov">ANDRII ROHOV</a>.
+  </p>
+  <div id="radio">
+    <div id="circle"></div>
+    
+  </div>
+
   </div>
   
   <script src="./script.js"></script>
